--- a/vignettes/TAME-toolkit.Rmd
+++ b/vignettes/TAME-toolkit.Rmd
@@ -31,7 +31,7 @@ This training module provides an overview of the publicly available databases at
 
 # Introduction to CompTox Chemicals Dashboard
 
-Accessing chemical data and wrangling it is a vital step in many types of workflows related to chemical, biological, and environmental modelling. While there are many resources available from which one can pull data, the [CompTox Chemicals Dashboard](https://comptox.epa.gov/dashboard/)(CCD) built and maintained by the United States Environmental Protection Agency is particularly well-designed and maintained. Originally introduced in [The CompTox Chemistry Dashboard: a community data resource for environmental chemistry](https://jcheminf.biomedcentral.com/articles/10.1186/s13321-017-0247-6), the CCD contains information on over 1.2 million chemicals as of September, 2023. Information contained for chemicals featured in the CCD include but are not limited to phys-chem properties, documentation and curation information of the featured data, hazard and fate/transport data. One can see an example of this in the search for the chemical Bisphenol A. 
+Accessing chemical data and wrangling it is a vital step in many types of workflows related to chemical, biological, and environmental modeling. While there are many resources available from which one can pull data, the [CompTox Chemicals Dashboard](https://comptox.epa.gov/dashboard/)(CCD) built and maintained by the United States Environmental Protection Agency is particularly well-designed and maintained. Originally introduced in [The CompTox Chemistry Dashboard: a community data resource for environmental chemistry](https://jcheminf.biomedcentral.com/articles/10.1186/s13321-017-0247-6), the CCD contains information on over 1.2 million chemicals as of September, 2023. Information contained for chemicals featured in the CCD include but are not limited to physico-chemical properties, documentation and curation information of the featured data, hazard and fate/transport data. One can see an example of this in the search for the chemical Bisphenol A. 
 
 ![Bisphenol A landing page](./Pictures/CCD BPA page.png){width=120%}
 
@@ -41,7 +41,7 @@ One can use the batch search functionality of the CCD to pull together desired d
 
 ![CCD Batch Search](./Pictures/CCD Batch Search.png){width=120%}
 
-One can download the selected information in various formats, such as a excel, csv, or different types of MOL files. While this is suitable for many projects, it does not necessarily work well when a programmatic approach to a modelling problem is desired. The steps involving inputting chemical identifier information, exporting into a file, loading and wrangling the data from file is both time consuming and a potential source of human error that may be hard to identify after the fact. 
+One can download the selected information in various formats, such as excel (.xlsx), comma-separated values (.csv), or different types of chemical table files (.e.g MOL). While this is suitable for many projects, it does not necessarily work well when a programmatic approach to a modeling problem is desired. The steps involving inputting chemical identifier information, exporting into a file, loading and wrangling the data from file is both time consuming and a potential source of human error that may be hard to identify after the fact. 
 
 ## CCTE APIs
 
@@ -152,7 +152,7 @@ dim(natadb)
 colnames(ccl4)
 head(ccl4, 1)
 ```
-We now collect the phys-chem properties of the chemicals in each list. We will use the batch forms of the function `get_chem_info()`, to which we supply a list of DTXSIDs.
+We now collect the physico-chemical properties of the chemicals in each list. We will use the batch forms of the function `get_chem_info()`, to which we supply a list of DTXSIDs.
 
 ```{r}
 ccl4$dtxsid
@@ -161,7 +161,7 @@ natadb$dtxsid
 ccl4_phys_chem <- get_chem_info_batch(ccl4$dtxsid)
 natadb_phys_chem <- get_chem_info_batch(natadb$dtxsid)
 ```
-Observe that this returns a single data.table for each query, and the data.table contains the phys-chem properties available from the CCD for each chemical in the query. We examine the set of phys-chem properties for the first chemical in ccl4. 
+Observe that this returns a single data.table for each query, and the data.table contains the physico-chemical properties available from the CCD for each chemical in the query. We examine the set of physico-chemical properties for the first chemical in ccl4. 
 
 *Question?* What are the propertyId and propType values present in the data? What are the mean values for a specific value of the propertyID when grouped by propType and when ungrouped? Try using 'boiling-point' and 'melting-point' for propertyId.
 
@@ -177,7 +177,7 @@ ccl4_phys_chem[propertyId == 'melting-point', .(Mean = mean(value)), by = .(prop
 ```
 
 
-First we look at all the phys-chem properties individually, then group them by each property (`boiling-point`, `melting-point`, etc...) and then additional group those by property type (`experimental` vs `predicted`). In the grouping, we look at the columns `value`, `unit`, `propertyID` and `propType`. We also demonstrate how take the mean of the values for each grouping.
+First we look at all the physico-chemical properties individually, then group them by each property (`boiling-point`, `melting-point`, etc...) and then additional group those by property type (`experimental` vs `predicted`). In the grouping, we look at the columns `value`, `unit`, `propertyID` and `propType`. We also demonstrate how take the mean of the values for each grouping.
 
 ```{r}
 head(ccl4_phys_chem[dtxsid == ccl4$dtxsid[[1]], ])
@@ -339,11 +339,11 @@ boiling <- ggplot(all_boiling_grouped, aes(mean_boiling_point)) +
 boiling
 ```
 
-A visual inspection of this set of graphs is not as clear as in the previous cases. Note that the predicted values for each data set tend to be higher than the experimental. The mean of CCL$, by predicted and experimental appears to be greater than the corresponding means for NATADB, as does the overall mean, but the interquartile ranges of these different groupings yield slightly different results. This gives us a sense that the picture for boiling point is not as clear cut between experimental and predicted for these two data sets as the previous phys-chem properties we investigated.
+A visual inspection of this set of graphs is not as clear as in the previous cases. Note that the predicted values for each data set tend to be higher than the experimental. The mean of CCL$, by predicted and experimental appears to be greater than the corresponding means for NATADB, as does the overall mean, but the interquartile ranges of these different groupings yield slightly different results. This gives us a sense that the picture for boiling point is not as clear cut between experimental and predicted for these two data sets as the previous physico-chemical properties we investigated.
 
 # Hazard data: Genotoxicity
 
-Now, having examined some of the distributions of the phys chem properties of the two lists, aggregated between predicted and experimental, we move towards learning more about these chemicals beyond phys-chem properties. Specifically, we will examine their genotoxicity.
+Now, having examined some of the distributions of the phys chem properties of the two lists, aggregated between predicted and experimental, we move towards learning more about these chemicals beyond physico-chemical properties. Specifically, we will examine their genotoxicity.
 
 Using the standard CompTox Chemicals Dashboard approach to access genotoxicity, one would again navigate to the individual chemical page 
 
@@ -602,4 +602,4 @@ natadb_rfd[, .(numeric_value = min(toxvalNumeric), units = units[which.min(toxva
 
 
 
-We do a few comparisons of phys-chem properties on chemicals from a few different lists from the CCD. In particular, we examine the vapor pressure of chemicals found in the [ASPECT](https://comptox.epa.gov/dashboard/chemical-lists/ASPECT) list and the [USGS](https://comptox.epa.gov/dashboard/chemical-lists/USGSWATER) list, which roughly focus on chemicals found in air and water, respectively.
+We do a few comparisons of physico-chemical properties on chemicals from a few different lists from the CCD. In particular, we examine the vapor pressure of chemicals found in the [ASPECT](https://comptox.epa.gov/dashboard/chemical-lists/ASPECT) list and the [USGS](https://comptox.epa.gov/dashboard/chemical-lists/USGSWATER) list, which roughly focus on chemicals found in air and water, respectively.
